acomode una linea tonta

--- a/BlogComputacion/blog/templates/blog/pages/index.html
+++ b/BlogComputacion/blog/templates/blog/pages/index.html
@@ -144,7 +144,7 @@
           <h3 class="section-title">Categorias Populares <i class="fa fa-tags" aria-hidden="true"></i></h3>
 
           {% for categoria in category %}
-            <div class="chip z-depth-1">{{categoria.name}}</div>
+            <div class="chip z-depth-1">{{categoria}}</div>
           {% endfor %}
 
         </div>
