Ya acomode el index para que las categorias que se muestren debajo de la barra de navegacion no sean todas, pirateria pura, okno

--- a/BlogComputacion/blog/templates/blog/pages/index.html
+++ b/BlogComputacion/blog/templates/blog/pages/index.html
@@ -29,7 +29,7 @@
       Todos
     </div>
   </a>
-  {% for categoria in category %}
+  {% for categoria in category_show %}
     <a href="#!">
       <div class="chip">
         {{categoria.name}}
