Ahora si muestra las categorias populares en la seccion de categorias pupulares de acuerdo al siguiente criterio: Son populares todas aquellas categorias que aparezcan en los post populares. Por cierto, por supuesto no repite las categorias

--- a/BlogComputacion/blog/templates/blog/pages/index.html
+++ b/BlogComputacion/blog/templates/blog/pages/index.html
@@ -143,7 +143,7 @@
         <div class="categorias-populares">
           <h3 class="section-title">Categorias Populares <i class="fa fa-tags" aria-hidden="true"></i></h3>
 
-          {% for categoria in category %}
+          {% for categoria in category_populares %}
             <div class="chip z-depth-1" name="category">
               <a href="/posts/search_category/?category={{categoria.name}}">{{categoria.name}}</a>
             </div>
