Ya selecciona los primeros 30 caracteres del texto para los post del index, lo unico que no me gusta es que si en medio del text hay un # o <br> este se ve como parte del texto

--- a/BlogComputacion/blog/templates/blog/pages/index.html
+++ b/BlogComputacion/blog/templates/blog/pages/index.html
@@ -58,9 +58,9 @@
             </p>
             <a href="#!" class="article-link"><p class="title"><h5>{{entarda.title}}</h5></p></a>
             <div class="divider"></div>
-            <!-- <div class="section">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error quibusdam quis iusto tempore cumque similique saepe illum? Deleniti tempore nemo repellat magnam, cum reprehenderit consectetur necessitatibus quos nostrum ipsum quisquam.</p>
-            </div> -->
+            <div class="section">
+              <p>{{ entrada.text|truncatewords:30 }}</p>
+            </div>
           </div>
           <div class="card-action">
             <div class="row">
