--- a/BlogComputacion/blog/templates/blog/main2.html
+++ b/BlogComputacion/blog/templates/blog/main2.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
     <title>Blog | {% block title %}{% endblock %}</title>
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito|Droid+Sans|Share+Tech+Mono" rel="stylesheet">
