--- a/BlogComputacion/blog/templates/blog/pages/detail.html
+++ b/BlogComputacion/blog/templates/blog/pages/detail.html
@@ -10,7 +10,7 @@
  <div class="row">
    <div class="col s12 l8">
      <div class="row">
-       <div class="card z-depth-3">
+       <div class="card z-depth-3 card-article">
          <div class="card-image">
            <img src="{{ post.cover.url }}" alt="" class="responsive-img">
          </div>
